19.07.10/packages/arm_cortex-a9_neon/base/index.md
---
---

# [releases](/releases/) / [19.07.10](/releases/19.07.10/) / [packages](/releases/19.07.10/packages/) / [arm_cortex-a9_neon](/releases/19.07.10/packages/arm_cortex-a9_neon/) / base


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 🗄️ [Packages](./Packages) | 44K | |
| 🗄️ [Packages.gz](./Packages.gz) | 16K | |
| 🗄️ [Packages.manifest](./Packages.manifest) | 56K | |
| 🗄️ [Packages.sig](./Packages.sig) | 4.0K | |
| 🗄️ [ar3k-firmware_20190416-1_arm_cortex-a9_neon.ipk](./ar3k-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 508K | |
| 🗄️ [ath9k-htc-firmware_20190416-1_arm_cortex-a9_neon.ipk](./ath9k-htc-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 64K | |
| 🗄️ [b43legacy-firmware_3.130.20.0-1_arm_cortex-a9_neon.ipk](./b43legacy-firmware_3.130.20.0-1_arm_cortex-a9_neon.ipk) | 20K | |
| 🗄️ [blkid_2.34-1_arm_cortex-a9_neon.ipk](./blkid_2.34-1_arm_cortex-a9_neon.ipk) | 40K | |
| 🗄️ [bnx2-firmware_20190416-1_arm_cortex-a9_neon.ipk](./bnx2-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 692K | |
| 🗄️ [brcmfmac-firmware-usb_20190416-1_arm_cortex-a9_neon.ipk](./brcmfmac-firmware-usb_20190416-1_arm_cortex-a9_neon.ipk) | 492K | |
| 🗄️ [busybox_1.30.1-6_arm_cortex-a9_neon.ipk](./busybox_1.30.1-6_arm_cortex-a9_neon.ipk) | 232K | |
| 🗄️ [ca-bundle_20200601-1_all.ipk](./ca-bundle_20200601-1_all.ipk) | 116K | |
| 🗄️ [carl9170-firmware_20190416-1_arm_cortex-a9_neon.ipk](./carl9170-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [dnsmasq_2.80-16.3_arm_cortex-a9_neon.ipk](./dnsmasq_2.80-16.3_arm_cortex-a9_neon.ipk) | 116K | |
| 🗄️ [dropbear_2019.78-2_arm_cortex-a9_neon.ipk](./dropbear_2019.78-2_arm_cortex-a9_neon.ipk) | 84K | |
| 🗄️ [e100-firmware_20190416-1_arm_cortex-a9_neon.ipk](./e100-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [e2fsprogs_1.44.5-2_arm_cortex-a9_neon.ipk](./e2fsprogs_1.44.5-2_arm_cortex-a9_neon.ipk) | 180K | |
| 🗄️ [edgeport-firmware_20190416-1_arm_cortex-a9_neon.ipk](./edgeport-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 20K | |
| 🗄️ [firewall_2019-11-22-8174814a-3_arm_cortex-a9_neon.ipk](./firewall_2019-11-22-8174814a-3_arm_cortex-a9_neon.ipk) | 48K | |
| 🗄️ [getrandom_2019-06-16-4df34a4d-4_arm_cortex-a9_neon.ipk](./getrandom_2019-06-16-4df34a4d-4_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [hostapd-common_2019-08-08-ca8c2bd2-8_arm_cortex-a9_neon.ipk](./hostapd-common_2019-08-08-ca8c2bd2-8_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [hostapd_2019-08-08-ca8c2bd2-8_arm_cortex-a9_neon.ipk](./hostapd_2019-08-08-ca8c2bd2-8_arm_cortex-a9_neon.ipk) | 324K | |
| 🗄️ [ip-tiny_5.0.0-2.1_arm_cortex-a9_neon.ipk](./ip-tiny_5.0.0-2.1_arm_cortex-a9_neon.ipk) | 136K | |
| 🗄️ [iw_5.0.1-1_arm_cortex-a9_neon.ipk](./iw_5.0.1-1_arm_cortex-a9_neon.ipk) | 40K | |
| 🗄️ [iwl3945-firmware_20190416-1_arm_cortex-a9_neon.ipk](./iwl3945-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 64K | |
| 🗄️ [iwl4965-firmware_20190416-1_arm_cortex-a9_neon.ipk](./iwl4965-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 80K | |
| 🗄️ [jntools_0.11-2_arm_cortex-a9_neon.ipk](./jntools_0.11-2_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [jshn_2020-05-25-66195aee-1_arm_cortex-a9_neon.ipk](./jshn_2020-05-25-66195aee-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [jsonfilter_2018-02-04-c7e938d6-1_arm_cortex-a9_neon.ipk](./jsonfilter_2018-02-04-c7e938d6-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [libblkid1_2.34-1_arm_cortex-a9_neon.ipk](./libblkid1_2.34-1_arm_cortex-a9_neon.ipk) | 124K | |
| 🗄️ [libblobmsg-json_2020-05-25-66195aee-1_arm_cortex-a9_neon.ipk](./libblobmsg-json_2020-05-25-66195aee-1_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [libbz2-1.0_1.0.8-1_arm_cortex-a9_neon.ipk](./libbz2-1.0_1.0.8-1_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [libcomerr0_1.44.5-2_arm_cortex-a9_neon.ipk](./libcomerr0_1.44.5-2_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [libcurl4_7.66.0-3_arm_cortex-a9_neon.ipk](./libcurl4_7.66.0-3_arm_cortex-a9_neon.ipk) | 120K | |
| 🗄️ [libertas-sdio-firmware_20190416-1_arm_cortex-a9_neon.ipk](./libertas-sdio-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 344K | |
| 🗄️ [libertas-spi-firmware_20190416-1_arm_cortex-a9_neon.ipk](./libertas-spi-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 92K | |
| 🗄️ [libertas-usb-firmware_20190416-1_arm_cortex-a9_neon.ipk](./libertas-usb-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 216K | |
| 🗄️ [libext2fs2_1.44.5-2_arm_cortex-a9_neon.ipk](./libext2fs2_1.44.5-2_arm_cortex-a9_neon.ipk) | 136K | |
| 🗄️ [libf2fs6_1.12.0-3_arm_cortex-a9_neon.ipk](./libf2fs6_1.12.0-3_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [libfuse1_2.9.7-2_arm_cortex-a9_neon.ipk](./libfuse1_2.9.7-2_arm_cortex-a9_neon.ipk) | 60K | |
| 🗄️ [libjson-c2_0.12.1-3.1_arm_cortex-a9_neon.ipk](./libjson-c2_0.12.1-3.1_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [libjson-script_2020-05-25-66195aee-1_arm_cortex-a9_neon.ipk](./libjson-script_2020-05-25-66195aee-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [libltdl7_2.4.6-2_arm_cortex-a9_neon.ipk](./libltdl7_2.4.6-2_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [liblua5.1.5_5.1.5-3_arm_cortex-a9_neon.ipk](./liblua5.1.5_5.1.5-3_arm_cortex-a9_neon.ipk) | 60K | |
| 🗄️ [libmbedtls12_2.16.12-1_arm_cortex-a9_neon.ipk](./libmbedtls12_2.16.12-1_arm_cortex-a9_neon.ipk) | 164K | |
| 🗄️ [libncurses6_6.1-5_arm_cortex-a9_neon.ipk](./libncurses6_6.1-5_arm_cortex-a9_neon.ipk) | 152K | |
| 🗄️ [libnghttp2-14_1.41.0-1_arm_cortex-a9_neon.ipk](./libnghttp2-14_1.41.0-1_arm_cortex-a9_neon.ipk) | 56K | |
| 🗄️ [libnl-tiny_0.1-5_arm_cortex-a9_neon.ipk](./libnl-tiny_0.1-5_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [libopenssl1.1_1.1.1n-1_arm_cortex-a9_neon.ipk](./libopenssl1.1_1.1.1n-1_arm_cortex-a9_neon.ipk) | 1.1M | |
| 🗄️ [libreadline8_8.0-1_arm_cortex-a9_neon.ipk](./libreadline8_8.0-1_arm_cortex-a9_neon.ipk) | 120K | |
| 🗄️ [libss2_1.44.5-2_arm_cortex-a9_neon.ipk](./libss2_1.44.5-2_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [libubox20191228_2020-05-25-66195aee-1_arm_cortex-a9_neon.ipk](./libubox20191228_2020-05-25-66195aee-1_arm_cortex-a9_neon.ipk) | 20K | |
| 🗄️ [libubus-lua_2022-02-21-b32a0e17-1_arm_cortex-a9_neon.ipk](./libubus-lua_2022-02-21-b32a0e17-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [libubus20210603_2022-02-21-b32a0e17-1_arm_cortex-a9_neon.ipk](./libubus20210603_2022-02-21-b32a0e17-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [libuci20130104_2019-09-01-415f9e48-4_arm_cortex-a9_neon.ipk](./libuci20130104_2019-09-01-415f9e48-4_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [libuclient20160123_2020-06-17-51e16ebf-1_arm_cortex-a9_neon.ipk](./libuclient20160123_2020-06-17-51e16ebf-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [libusb-1.0-0_1.0.22-2_arm_cortex-a9_neon.ipk](./libusb-1.0-0_1.0.22-2_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [libusb-compat4_0.1.5-2_arm_cortex-a9_neon.ipk](./libusb-compat4_0.1.5-2_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [libustream-mbedtls20150806_2020-03-13-40b563b1-1_arm_cortex-a9_neon.ipk](./libustream-mbedtls20150806_2020-03-13-40b563b1-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [libuuid1_2.34-1_arm_cortex-a9_neon.ipk](./libuuid1_2.34-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [libwolfssl32_5.2.0-stable-1_arm_cortex-a9_neon.ipk](./libwolfssl32_5.2.0-stable-1_arm_cortex-a9_neon.ipk) | 440K | |
| 🗄️ [logd_2019-06-16-4df34a4d-4_arm_cortex-a9_neon.ipk](./logd_2019-06-16-4df34a4d-4_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [lua_5.1.5-3_arm_cortex-a9_neon.ipk](./lua_5.1.5-3_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [luci-app-jntools_git-22.215.71434-6eccf90-1_all.ipk](./luci-app-jntools_git-22.215.71434-6eccf90-1_all.ipk) | 4.0K | |
| 🗄️ [memtool_1-1_arm_cortex-a9_neon.ipk](./memtool_1-1_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [mkf2fs_1.12.0-3_arm_cortex-a9_neon.ipk](./mkf2fs_1.12.0-3_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [mt7601u-firmware_20190416-1_arm_cortex-a9_neon.ipk](./mt7601u-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [mwifiex-pcie-firmware_20190416-1_arm_cortex-a9_neon.ipk](./mwifiex-pcie-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 504K | |
| 🗄️ [mwifiex-sdio-firmware_20190416-1_arm_cortex-a9_neon.ipk](./mwifiex-sdio-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 432K | |
| 🗄️ [mwl8k-firmware_20190416-1_arm_cortex-a9_neon.ipk](./mwl8k-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 192K | |
| 🗄️ [netifd_2021-01-09-753c351b-1_arm_cortex-a9_neon.ipk](./netifd_2021-01-09-753c351b-1_arm_cortex-a9_neon.ipk) | 72K | |
| 🗄️ [odhcp6c_2021-01-09-64e1b4e7-16_arm_cortex-a9_neon.ipk](./odhcp6c_2021-01-09-64e1b4e7-16_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [odhcpd-ipv6only_2020-05-03-49e4949c-3_arm_cortex-a9_neon.ipk](./odhcpd-ipv6only_2020-05-03-49e4949c-3_arm_cortex-a9_neon.ipk) | 36K | |
| 🗄️ [openwrt-keyring_2021-02-20-49283916-2_arm_cortex-a9_neon.ipk](./openwrt-keyring_2021-02-20-49283916-2_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [opkg_2021-01-31-c5dccea9-1_arm_cortex-a9_neon.ipk](./opkg_2021-01-31-c5dccea9-1_arm_cortex-a9_neon.ipk) | 68K | |
| 🗄️ [p54-pci-firmware_1_arm_cortex-a9_neon.ipk](./p54-pci-firmware_1_arm_cortex-a9_neon.ipk) | 24K | |
| 🗄️ [p54-usb-firmware_1_arm_cortex-a9_neon.ipk](./p54-usb-firmware_1_arm_cortex-a9_neon.ipk) | 24K | |
| 🗄️ [ppp-mod-pppoe_2.4.7.git-2019-05-25-3_arm_cortex-a9_neon.ipk](./ppp-mod-pppoe_2.4.7.git-2019-05-25-3_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [ppp_2.4.7.git-2019-05-25-3_arm_cortex-a9_neon.ipk](./ppp_2.4.7.git-2019-05-25-3_arm_cortex-a9_neon.ipk) | 112K | |
| 🗄️ [prism54-firmware_1_arm_cortex-a9_neon.ipk](./prism54-firmware_1_arm_cortex-a9_neon.ipk) | 80K | |
| 🗄️ [procd_2020-03-07-09b9bd82-1_arm_cortex-a9_neon.ipk](./procd_2020-03-07-09b9bd82-1_arm_cortex-a9_neon.ipk) | 44K | |
| 🗄️ [r8169-firmware_20190416-1_arm_cortex-a9_neon.ipk](./r8169-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 20K | |
| 🗄️ [rpcd-mod-file_2020-05-26-67c8a3fd-1_arm_cortex-a9_neon.ipk](./rpcd-mod-file_2020-05-26-67c8a3fd-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [rpcd-mod-iwinfo_2020-05-26-67c8a3fd-1_arm_cortex-a9_neon.ipk](./rpcd-mod-iwinfo_2020-05-26-67c8a3fd-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [rpcd_2020-05-26-67c8a3fd-1_arm_cortex-a9_neon.ipk](./rpcd_2020-05-26-67c8a3fd-1_arm_cortex-a9_neon.ipk) | 20K | |
| 🗄️ [rs9113-firmware_20190416-1_arm_cortex-a9_neon.ipk](./rs9113-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 84K | |
| 🗄️ [rt2800-pci-firmware_20190416-1_arm_cortex-a9_neon.ipk](./rt2800-pci-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [rt2800-usb-firmware_20190416-1_arm_cortex-a9_neon.ipk](./rt2800-usb-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [rt61-pci-firmware_20190416-1_arm_cortex-a9_neon.ipk](./rt61-pci-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [rt73-usb-firmware_20190416-1_arm_cortex-a9_neon.ipk](./rt73-usb-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [rtk_hciattach_20201020-1_arm_cortex-a9_neon.ipk](./rtk_hciattach_20201020-1_arm_cortex-a9_neon.ipk) | 44K | |
| 🗄️ [rtl8192ce-firmware_20190416-1_arm_cortex-a9_neon.ipk](./rtl8192ce-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 24K | |
| 🗄️ [rtl8192cu-firmware_20190416-1_arm_cortex-a9_neon.ipk](./rtl8192cu-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 20K | |
| 🗄️ [rtl8192de-firmware_20190416-1_arm_cortex-a9_neon.ipk](./rtl8192de-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [rtl8192se-firmware_20190416-1_arm_cortex-a9_neon.ipk](./rtl8192se-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 40K | |
| 🗄️ [rtl8192su-firmware_20190416-1_arm_cortex-a9_neon.ipk](./rtl8192su-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 64K | |
| 🗄️ [rtl8821ae-firmware_20190416-1_arm_cortex-a9_neon.ipk](./rtl8821ae-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [terminfo_6.1-5_arm_cortex-a9_neon.ipk](./terminfo_6.1-5_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [ubox_2019-06-16-4df34a4d-4_arm_cortex-a9_neon.ipk](./ubox_2019-06-16-4df34a4d-4_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [ubus_2022-02-21-b32a0e17-1_arm_cortex-a9_neon.ipk](./ubus_2022-02-21-b32a0e17-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [ubusd_2022-02-21-b32a0e17-1_arm_cortex-a9_neon.ipk](./ubusd_2022-02-21-b32a0e17-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [uci_2019-09-01-415f9e48-4_arm_cortex-a9_neon.ipk](./uci_2019-09-01-415f9e48-4_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [uclient-fetch_2020-06-17-51e16ebf-1_arm_cortex-a9_neon.ipk](./uclient-fetch_2020-06-17-51e16ebf-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [uhttpd-mod-ubus_2020-10-01-3abcc891-1_arm_cortex-a9_neon.ipk](./uhttpd-mod-ubus_2020-10-01-3abcc891-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [uhttpd_2020-10-01-3abcc891-1_arm_cortex-a9_neon.ipk](./uhttpd_2020-10-01-3abcc891-1_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [urandom-seed_1.0-1_arm_cortex-a9_neon.ipk](./urandom-seed_1.0-1_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [urngd_2020-01-21-c7f7b6b6-1_arm_cortex-a9_neon.ipk](./urngd_2020-01-21-c7f7b6b6-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [usign_2020-05-23-f1f65026-1_arm_cortex-a9_neon.ipk](./usign_2020-05-23-f1f65026-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [wireless-regdb_2021.08.28-1_all.ipk](./wireless-regdb_2021.08.28-1_all.ipk) | 4.0K | |
| 🗄️ [wl12xx-firmware_20190416-1_arm_cortex-a9_neon.ipk](./wl12xx-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 1.2M | |
| 🗄️ [wl18xx-firmware_20190416-1_arm_cortex-a9_neon.ipk](./wl18xx-firmware_20190416-1_arm_cortex-a9_neon.ipk) | 336K | |
| 🗄️ [wpa-supplicant_2019-08-08-ca8c2bd2-8_arm_cortex-a9_neon.ipk](./wpa-supplicant_2019-08-08-ca8c2bd2-8_arm_cortex-a9_neon.ipk) | 328K | |
| 🗄️ [zlib_1.2.11-4_arm_cortex-a9_neon.ipk](./zlib_1.2.11-4_arm_cortex-a9_neon.ipk) | 44K | |

